<resources>
    <string name="app_name">zhangshuy</string>
    <string name="app_bunt1">首页</string>
    <string name="app_bun3">电影</string>
    <string name="app_bun2">影院</string>
    <string name="app_bun4">演出</string>
    <string name="app_bun5">我的</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_tbun3">即将上映</string>
    <string name="app_tbun2">正在热映</string>
    <string name="app_tbun1">北京</string>
    <string name="hello">Hello World, XListViewActivity!</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
</resources>
