<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ZhuActivity">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <FrameLayout
            android:id="@+id/frag_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            ></FrameLayout>
        <RadioGroup
            android:id="@+id/zradio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <RadioButton
                android:id="@+id/butn1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:button="@null"
                android:text="@string/app_bunt1"
                android:drawableTop="@drawable/ic_butn1"/>
            <RadioButton
                android:id="@+id/butn2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:button="@null"
                android:text="@string/app_bun3"
                android:drawableTop="@drawable/ic_butn1"/>
            <RadioButton
                android:id="@+id/butn3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:button="@null"
                android:drawableTop="@drawable/ic_butn1"
               android:text="@string/app_bun2"/>
            <RadioButton
                android:id="@+id/butn4"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:button="@null"
                android:drawableTop="@drawable/ic_butn1"
                android:text="@string/app_bun4"/>
            <RadioButton
                android:id="@+id/butn5"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:button="@null"
                android:drawableTop="@drawable/ic_butn1"
                android:text="@string/app_bun5"/>
        </RadioGroup>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>